rust/katsuctl/src/sandbox/snapshots/katsuctl__sandbox__start__tests__snapshot_ephemeral_agent_with_prompt.snap
---
source: rust/katsuctl/src/sandbox/start.rs
expression: "render(&spec, &p)"
---
#!/usr/bin/env bash
set -euo pipefail

# katsuctl sandbox start: set up and boot agent instance '20260627-120000-4242'
mkdir -p "/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242" "/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242"
chmod 700 "/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242"
chmod 700 "/state/katsuobushi"

# Per-instance bare git mirror + seeded branch (the guest clones it and pushes back).
/nix/store/git/bin/git clone --bare "/home/user/project" "/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/sync.git" >/dev/null 2>&1
/nix/store/git/bin/git -C "/home/user/project" push --quiet "/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/sync.git" "a1b2c3d4e5f6a7b8c9d0e1f2a3b4c5d6e7f8a9b0:refs/heads/sandbox/20260627-120000-4242" --force
chmod -R a+rwX "/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/sync.git"

# Declared secrets, staged as references — the value is re-read at runtime, never baked in.
if [ -z "${HARNESS_OAUTH_TOKEN:-}" ]; then
  echo "sandbox: required secret CLAUDE_CODE_OAUTH_TOKEN is not set on the host (expected in \$HARNESS_OAUTH_TOKEN)." >&2
  exit 1
fi
printf '%s' "${HARNESS_OAUTH_TOKEN}" > "/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/cred-CLAUDE_CODE_OAUTH_TOKEN"
chmod 0600 "/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/cred-CLAUDE_CODE_OAUTH_TOKEN"
export KATSU_CRED_CLAUDE_CODE_OAUTH_TOKEN="/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/cred-CLAUDE_CODE_OAUTH_TOKEN"

# Ephemeral ssh keypair (private key stays in the runtime tmpfs; pubkey travels in the share).
[ -f "/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/id" ] || /nix/store/openssh/bin/ssh-keygen -t ed25519 -N "" -f "/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/id" -q
cp "/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/id.pub" "/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/authorized_keys"

# Per-instance launch environment for the microvm runner.
export KATSU_STATE_DIR="/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242"
export KATSU_SSH_PORT=22042
export KATSU_VSOCK_CID=4242

# Back each guest disk image from the persistent state dir via a runtime symlink.
ln -sfn "/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/rw-store.img" "/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/rw-store.img"
ln -sfn "/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/nix-db.img" "/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/nix-db.img"
ln -sfn "/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/scratch.img" "/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/scratch.img"
cd "/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242"

# Agent mode: detach a lingering VM (setsid) that outlives this script.
setsid /nix/store/microvm/bin/microvm-run > "/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/console.log" 2>&1 < /dev/null &
vm=$!
disown "$vm" 2>/dev/null || true
echo "sandbox: agent instance '20260627-120000-4242' running (cid 4242)."
# Deliver the first turn by tail-calling the prompt subcommand (it bakes in the readiness wait).
exec katsuctl sandbox --config "/nix/store/katsuctl-sandbox-spec.json" prompt "20260627-120000-4242" 'fix the bug in foo'\''s "bar" path'
