rust/katsuctl/src/sandbox/snapshots/katsuctl__sandbox__start__tests__snapshot_named_interactive.snap
---
source: rust/katsuctl/src/sandbox/start.rs
expression: "render(&spec, &p)"
---
#!/usr/bin/env bash
set -euo pipefail

# katsuctl sandbox start: set up and boot interactive instance 'myfeature-0badf00d'
mkdir -p "/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d" "/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d"
chmod 700 "/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d"
chmod 700 "/state/katsuobushi"

# Per-instance bare git mirror + seeded branch (the guest clones it and pushes back).
# resuming named instance from its existing branch (existingbranch789)
chmod -R a+rwX "/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/sync.git"

# Ephemeral ssh keypair (private key stays in the runtime tmpfs; pubkey travels in the share).
[ -f "/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/id" ] || /nix/store/openssh/bin/ssh-keygen -t ed25519 -N "" -f "/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/id" -q
cp "/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/id.pub" "/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/authorized_keys"

# Per-instance launch environment for the microvm runner.
export KATSU_STATE_DIR="/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d"
export KATSU_SSH_PORT=22042

# Back each guest disk image from the persistent state dir via a runtime symlink.
ln -sfn "/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/rw-store.img" "/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/rw-store.img"
ln -sfn "/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/nix-db.img" "/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/nix-db.img"
ln -sfn "/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/scratch.img" "/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/scratch.img"
cd "/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d"

# Tear the VM down on any exit; an ephemeral instance also prunes its state dir.
cleanup() {
  trap - EXIT
  trap "" INT TERM HUP
  if [ -n "${vm:-}" ] && kill -0 "$vm" 2>/dev/null; then
    kill "$vm" 2>/dev/null || true
    for _ in 1 2 3 4 5; do kill -0 "$vm" 2>/dev/null || break; sleep 1; done
    kill -9 "$vm" 2>/dev/null || true
    wait "$vm" 2>/dev/null || true
  fi
  rm -rf "/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d"
  [ -d "/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d" ] || return 0
  echo "sandbox: kept named instance 'myfeature-0badf00d' at /state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d"
}
trap cleanup EXIT
trap 'exit 143' TERM
trap 'exit 130' INT
trap 'exit 129' HUP

echo "sandbox: launching interactive instance 'myfeature-0badf00d' (logs: /state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/console.log)"
/nix/store/microvm/bin/microvm-run > "/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/console.log" 2>&1 &
vm=$!
echo "sandbox: connecting to 'myfeature-0badf00d' on 127.0.0.1:22042"
for _ in $(seq 1 120); do (exec 3<>"/dev/tcp/127.0.0.1/22042") 2>/dev/null && break; sleep 1; done
/nix/store/openssh/bin/ssh -i "/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/id" -p 22042 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o LogLevel=ERROR agent@127.0.0.1 || true
